--- a/style/all.css
+++ b/style/all.css
@@ -6,4 +6,6 @@
 @import url('components/table.css');
 @import url('components/up_button.css');
 @import url('components/apply_button.css');
+@import url('components/modal.css');
+
 
