--- a/style/components/apply_button.css
+++ b/style/components/apply_button.css
@@ -1,18 +1,18 @@
 .apply_button{
     background: #66B821;
 border-radius: 900px;
-    position: absolute;
+    position: fixed;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 153px;
 height: 42px;
 
-     top: 560px;
+     top: 750px;
  
 margin: 5px;
 
-    right: 44px;
+    right: 150px;
 
     color: #fff;
     display: flex;
@@ -34,4 +34,9 @@ margin: 5px;
     width: 20px;
     height: 20px;
    
+}
+.apply_button:hover{
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 2px 4px #888;
+    cursor: pointer;
 }
