--- a/style/components/container.css
+++ b/style/components/container.css
@@ -1,10 +1,12 @@
 .container{
-    max-width: 1440px;
+   /* width: 100%; */
+   padding: 25px;;
     position: relative;
     
     text-align: center;
 
     left: 0;
     right: 0;
-    margin: auto;
+    margin: 5px;
+
 }
