--- a/style/components/table.css
+++ b/style/components/table.css
@@ -1,30 +1,31 @@
 table {
-    max-width: 1380px;
     min-width:1370px ;
-    align-items: center;
-    justify-content: center;
+  align-items: center;
+  justify-content: center;
+
+
+  display: flex;
+  /* overflow-y: auto; */
+  border-collapse: collapse;
   
-    display: flex;
-    /* overflow-y: auto; */
-    border-collapse: collapse;
-    
-    /* letter-spacing: 1px; */
-   
-   
-    font-size: 0.8rem;
-  }
-  .table{
-    padding-top: 25px;
-    overflow-x: scroll;
-    overflow-y: scroll;
-    /*  */
-   
-    /* align-items: center;
-    justify-content: center;
-    
-    display: flex; */
-  }
+  /* letter-spacing: 1px; */
+ 
+ 
+  font-size: 0.8rem;
+}
+.table{
+  height: 70vh;
+  padding-top: 25px;
+  overflow-x: scroll;
+  overflow-y: scroll;
+  /*  */
+ 
+  /* align-items: center;
+  justify-content: center;
   
+  display: flex; */
+}
+
   td, th {
       
     border: 0.5px solid #C9C9C9;
@@ -39,7 +40,7 @@ table {
   
   td {
     vertical-align: center;
-      max-width: 190px;
+      /* max-width: 190px; */
     text-align: left;
   }
   
@@ -90,6 +91,10 @@ table {
   .text-decor{
     text-decoration-line: underline;
   }
+  .text-decor:hover{
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+  }
   .table-elements{
       display: flex;
   }
@@ -122,6 +127,13 @@ table {
     border-radius: 50%;
     margin-right: 15px;
 }
+.grey_status {
+  background:  #B5B5B5;
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
 
 
 
@@ -130,6 +142,7 @@ table {
 
     .table::-webkit-scrollbar-track {
        width: 1380px;
+       height: 50vh;
     
         border-radius: 10px;
         background: rgba(0,0,0,0.1);
@@ -138,6 +151,7 @@ table {
     }
         
         .table::-webkit-scrollbar {
+          
             height: 10px;
             width: 10px;
             background-color: #F5F5F5;
