--- a/style/components/up_button.css
+++ b/style/components/up_button.css
@@ -1,14 +1,14 @@
 .up_button{
     width: 40px;
     height: 40px;
-    position: absolute;
+    position: fixed;
     /* top: 32vh; */
-    top: 560px;
+    top: 750px;
     /* padding: 5px; */
     /* margin-left: -100px; */
     border-radius: 50%;
     /* margin: 15px; */
-    left: 55px;
+    left: 150px;
     border: 0.5px solid #000000;
     color: #fff;
     display: flex;
@@ -26,4 +26,8 @@
     position: absolute;
     width: 20px;
     height: 20px;
+}
+.up_button:hover{
+    box-shadow: 2px 2px 4px #888;
+    cursor: pointer;
 }
