--- a/style/components/table.css
+++ b/style/components/table.css
@@ -1,4 +1,5 @@
 table {
+ 
     min-width:1370px ;
   align-items: center;
   justify-content: center;
@@ -14,10 +15,11 @@ table {
   font-size: 0.8rem;
 }
 .table{
-  height: 70vh;
-  padding-top: 25px;
-  overflow-x: scroll;
-  overflow-y: scroll;
+ 
+  /* height: 70vh;
+  padding-top: 25px; */
+  overflow-x: auto;
+  overflow-y: auto;
   /*  */
  
   /* align-items: center;
@@ -140,7 +142,7 @@ table {
 
     
 
-    .table::-webkit-scrollbar-track {
+    /* .table::-webkit-scrollbar-track {
        width: 1380px;
        height: 50vh;
     
@@ -169,4 +171,4 @@ table {
               
               .table::-webkit-scrollbar-thumb:active {
                 background: linear-gradient(left, #22ADD4, #1E98BA);
-              }
+              } */
